# robomodule

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: RCR_motor_config.yaml  all_motor_config.yaml  can_config.yaml  clean_motor_config.yaml
include/robomodule/: canbus_motor_node.h  controlcan.h  robomoduleCan.h  robomodule_node.h
include/robomodule/kinco/: can_application.h
launch/: cleanmotor_bringup.launch  demo.launch  rcrmotor_bringup.launch  test_can.launch
lib/usbcan_libusb_x64_2018_10_15/test/: test  test.c
python/: clean_motor_control.py  frame_node.py  motor_control.py  rcr_motor_control.py  test_node.py
src/: canbus_motor_node copy.cpp  canbus_motor_node.cpp  rcrmotor_can.cpp  robomoduleCan.cpp  robomodule_can_startup_node.cpp  robomodule_node.cpp  test_can.cpp
src/kinco/: can_application.cpp
